--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 							<p>Melody Candy</p>
 
-							<a href="MelodyCandy.html">View more</a>
+							<a href="MelodyCandy.html"></a>
 
                         </figcaption>
 
