--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@
 
                 	<figure class="effect-oscar">
 
-                    	<img src="images/home-images/MelodyCandy.png"  alt="" class="img-responsive"/>
+                        <a href="MelodyCandy.html">
+                            <img src="images/home-images/MelodyCandy.png"  alt="" class="img-responsive" /></a>
 
-                        <figcaption>
+                     <!--   <figcaption>
 
                         	
 
@@ -148,7 +149,7 @@
 
 							<a href="MelodyCandy.html"></a>
 
-                        </figcaption>
+                        </figcaption> -->
 
                     </figure>
 
