--- a/Player's Visual Expression.html
+++ b/Player's Visual Expression.html
@@ -16,7 +16,7 @@
 
 
 
-        <title>:: avana LLC ::</title>
+        <title>Player's Visual Expression</title>
 
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
