--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-        <title>:: avana LLC ::</title>
+        <title>Sho Iijima</title>
 
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
