--- a/Expanded Finger.html
+++ b/Expanded Finger.html
@@ -16,7 +16,7 @@
 
 
 
-        <title>:: avana LLC ::</title>
+        <title>Expanded Finger</title>
 
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
