--- a/Maker's Speaker Box.html
+++ b/Maker's Speaker Box.html
@@ -16,7 +16,7 @@
 
 
 
-        <title>:: avana LLC ::</title>
+        <title>Maker's speaker box</title>
 
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
