--- a/MelodyCandy.html
+++ b/MelodyCandy.html
@@ -16,7 +16,7 @@
 
 
 
-        <title>:: avana LLC ::</title>
+        <title>Melody Candy</title>
 
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
