--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 
 
-        <title>:: avana LLC | About ::</title>
+        <title>Sho Iijima | About ::</title>
 
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
