--- a/Gen.html
+++ b/Gen.html
@@ -177,7 +177,7 @@
                             <ul class="grid-lod effect-2" id="grid">
 
 
-                                <li><img src="images/work/Gen/_DSC0276.JPG"  width=560 alt="" class="img-responsive"/ ></li>
+                                <li><img src="images/work/Gen/Gen.png"  width=560 alt="" class="img-responsive"/ ></li>
                                  <li><img src="images/work/Gen/FullSizeRender%202.jpg"  width=560 alt="" class="img-responsive"/ ></li>
 
                                
