--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
              
 
                         <a href="Gen.html">
-                            <img src="images/home-images/_DSC0276.JPG" alt="" class="img-responsive"/></a>
+                            <img src="images/home-images/Gen.png" alt="" class="img-responsive"/></a>
 
                        
 
