--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                         <br>
                         <p>フィジカルコンピューティングを通じた新しいライブ体験の提案や、メディアアートの制作を行っています。</p>
                         <br>
-                        <p>大学院では、ライブハウスにおける音楽の楽しみ方における文化を見つめ、制作を通じて未来のライブ体験に新しい提案をすることを目指しています。</p>
+                        <p>大学院では、ライブハウスでの音楽の楽しみ方における文化を見つめ、制作を通じて未来のライブ体験に新しい提案をすることを目指しています。</p>
                         <br>
                         
                         <p>contact: s.iijima17[at]iamas.ac.jp</p>
