--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@
                 <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6 grid">
 
                 	<ul class="grid-lod effect-2" id="grid">
+                        <li>
+
+                        	
+                            <a href="AfterImage.html">
+                            <img src="images/home-images/Afterimage.png" alt="" class="img-responsive"/>
+                            </a>
+
+                             <br>
+                        </li>
 
                     	<li>
 
