--- a/Akari.html
+++ b/Akari.html
@@ -147,7 +147,7 @@
 
                                     <p>交通の要所として歴史の全てを見守りながらも、表舞台には立つことなくそっと営み、脇役として寄り添ってきたこの街のあり方を、倉庫のなかでひっそりと輝き続けるLEDの大木に例えました。また、この宿場町としての温かさが現在にまで引き継がれていると信じ、温かい会話の集合体としてのインスタレーションを目指しました。</p>
 
-                                    <p>亀山市で録音した複数人の日常会話をプログラムに読みこませ、花の形を模したLEDの造形が声の入力に応じて発光する事で、光による対話の表現を行なっています。</p>
+                                    <p>亀山市で録音した複数人の日常会話をプログラムに読みこませ、花の形を模したLEDの造形が声の入力に反応して発光する事で、光による対話の表現を行なっています。</p>
 
                                     <p>また大木の造型に取り付けられたLEDは、静かな朝から客人を招いた賑やかな夜を迎え、客人が去っていき、また再び静かな夜に戻るという２日間のタイムスケールで発光の様子を変化させています。</p>
 
