--- a/3dayfab.html
+++ b/3dayfab.html
@@ -122,7 +122,7 @@
 
                     	<header>
 
-                        	<h2><span>3Day Fab</span> </h2>
+                        	<h2><span>3Day Fab</span></h2>
                         <!--    <h2><span>3Day Fab</span> Welcome!</h2> -->
 
 
@@ -173,7 +173,7 @@
                     	<li>
 
                         	
-                            <a href="Expanded%20Finger.html">
+                            <a href="https://www.instagram.com/p/BxumOtjhkgX/">
                             <img src="images/3dayfab-images/MusicShieldCase.JPG" alt="" class="img-responsive"/>
                             </a>
 
