--- a/about.html
+++ b/about.html
@@ -126,8 +126,10 @@
                         <br>
 
                         <br>
-                        <p>ハードウェアセンシングを中心とした技術を持ち、広告制作や製品開発のお手伝いをしています。</p>
+                        <p>ハードウェアセンシングを中心とした技術を用いて、広告制作や製品開発のお手伝いをしています。</p>
                         <p>音楽体験の拡張、デジタルファブリケーションがもたらす技術の民主化を主なテーマとして、制作活動を行っています。</p>
+                        <p>ものづくりが個人にとって、もっと自由なものになるように。</p>
+
                         
                         <!--
                         <p>フィジカルコンピューティングを通じた新しいライブ体験の提案や、メディアアートの制作を行っています。</p>
@@ -149,7 +151,7 @@
                 	<article class="about-content">
 
                         <p>飯島祥　　Sho Iijima</p>
-                        <p>1993年愛知県生まれ。</p>
+                        <p>1993年 愛知県生まれ。</p>
                         <p>2014.3~2017.3　九州大学工学部機械工学科</p>
                         <p>2015.7~2016.9  ファブラボ太宰府スタッフ</p>
                         <p>2016.1~2016.7   <a href="http://archive.fabacademy.org/fabacademy2016/fablabkyushu/students/153/" title="Fab Academy"> Fab Academy</a></p>
@@ -204,7 +206,7 @@
 
 
                             
-<img src="images/about-images/portfolio.jpg" height=490 >
+<img src="images/about-images/portfolio4.jpg" height=490 >
                             <br><br><br>
                             	<!--<img src="images/about-images/about-image-2.jpg" class="img-responsive"/>
 
